# xmonad-config

./: .gitignore  LICENSE  build  default.nix  hie-wrapper.sh  shell.nix  update-nix.sh  xmonad-config.cabal  xmonad-config.nix  xmonad.hs
XMonad/Layout/: ToggleLayout.hs
lib/XMonad/: Lens.hs
lib/XMonad/Layout/: TabbedWithTray.hs  ToggleLayout.hs
src/: ToggleLayout.hs
