
name:                xmonad-config
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Gareth Charnock
maintainer:          gareth.tpc@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable xmonad-config
  ghc-options:         -Wall -Wno-missing-signatures
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , xmonad
                     , xmonad-contrib
                     , unix
                     , lens
                     , transformers
                     , mtl
                     , containers
                     , process
  hs-source-dirs:      .
  main-is:  xmonad.hs
  default-language:    Haskell2010
