cabal-version:       2.4
name:                xmonad-config
version:             0.1.0.0
license-file:        LICENSE
author:              Gareth Charnock
maintainer:          gareth.tpc@gmail.com
build-type:          Simple

executable xmonad-config
  ghc-options:         -Wall -Wno-missing-signatures
  -- other-extensions:
  build-depends:       base >=4.11 && <4.13
                     , xmonad
                     , xmonad-contrib
                     , unix
                     , lens
                     , transformers
                     , mtl
                     , containers
                     , process
  hs-source-dirs:      lib
  main-is:  ../xmonad.hs
  default-language:    Haskell2010
